[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
dirs = "4.0"
serde = "1.0.117"
serde_json = "1.0.59"
serde_derive = "1.0.117"
clap = { version = "3.2.5", features = ["derive"] }